--- a/tmtk/arborist/static/jupyter_embedded.html
+++ b/tmtk/arborist/static/jupyter_embedded.html
@@ -2,9 +2,9 @@
 <html lang="en" style="height: 100%!important;">
 <!--<html lang="en">-->
 <head>
-  <link rel="stylesheet" href="/nbextensions/transmart-arborist/jstree/dist/themes/default/style.min.css"/>
-  <link rel="stylesheet" href="/nbextensions/transmart-arborist/bootstrap-4.0.0a5.css"/>
-  <link rel="stylesheet" href="/nbextensions/transmart-arborist/mainstyle.css"/>
+  <link rel="stylesheet" href="{{ static_base  }}/jstree/dist/themes/default/style.min.css"/>
+  <link rel="stylesheet" href="{{ static_base  }}/bootstrap-4.0.0a5.css"/>
+  <link rel="stylesheet" href="{{ static_base  }}/mainstyle.css"/>
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <div id="tree-div"></div>
     <div id="search-container">
       <input class="form-control" type="text" id="search-box" placeholder="Search..."/>
-      <img id="search_spinner" src="/nbextensions/transmart-arborist/images/spin.svg">
+      <img id="search_spinner" src="{{ static_base  }}/images/spin.svg">
     </div>
     <div class="alert fade show" id="myAlert" role="alert">
       <strong><span id="alert-text"></span></strong>
@@ -121,13 +121,16 @@
       </div>
     </div>
   </div>
+</div>
 
   <script type="application/javascript">
-    var treeData = {{ json | safe }};
+      var treeData = {{ json | safe }};
+      var static_base = "{{ static_base }}";
+      var base_url = "{{ base_url }}";
   </script>
 
-  <script src="/nbextensions/transmart-arborist/jquery-1.11.1.js"></script>
-  <script src="/nbextensions/transmart-arborist/jstree/dist/jstree.min.js"></script>
-  <script src="/nbextensions/transmart-arborist/tether-1.2.0.js"></script>
-  <script src="/nbextensions/transmart-arborist/bootstrap-4.0.0a5.js"></script>
-  <script src="/nbextensions/transmart-arborist/tree.js"></script>
+  <script src="{{ static_base  }}/jquery-1.11.1.js"></script>
+  <script src="{{ static_base  }}/jstree/dist/jstree.min.js"></script>
+  <script src="{{ static_base  }}/tether-1.2.0.js"></script>
+  <script src="{{ static_base  }}/bootstrap-4.0.0a5.js"></script>
+  <script src="{{ static_base  }}/tree.js"></script>
