Show datafile header for a variable in arborist.

--- a/tmtk/arborist/static/jupyter_embedded.html
+++ b/tmtk/arborist/static/jupyter_embedded.html
@@ -29,13 +29,14 @@
         </div>
         <form id="datanodedetails" class="blockform">
             <ul>
-                <div class="clinicaldata" hidden>
-                    File: <span id="filename"></span> (<span id="columnnumber"></span>)
-                </div>
-
-                <div class="dfv" hidden>
-                    Datafile Value: <span id="datafile_value"></span>
-                </div>
+                <small>
+                    <div class="clinicaldata" hidden>
+                        File: <span id="filename"></span> (<span id="columnnumber"></span>, <span id="datafile_header"></span>)
+                    </div>
+                    <div class="dfv" hidden>
+                        Datafile Value: <span id="datafile_value"></span>
+                    </div>
+                </small>
             </ul>
 
             <table width="95%">
